fix: tweak title spacing

--- a/qr-code-component/styles.css
+++ b/qr-code-component/styles.css
@@ -83,7 +83,7 @@ img {
 h1 {
   font-size: 1.375rem;
   line-height: 1.275;
-  margin-top: 1.2em;
+  margin-top: 1.1em;
   color: hsl(var(--color-dark-blue));
 }
 
